crates/solidity-v2/testing/snapshots/diagnostics_output/type_system/storage_layout_base_slot/int_constant_negative/generated/solc/0.8.31-failure.txt
# This file is generated automatically by infrastructure scripts. Please don't edit by hand.

Diagnostics: 1

[TypeError 6753] Error: The base slot of the storage layout evaluates to -42, which is outside the range of type uint256.
   ╭─[input.sol:7:22]
   │
 7 │ contract C layout at x {}
   │                      ┬  
   │                      ╰── Error occurred here.
───╯
